--- a/icons/style.css
+++ b/icons/style.css
@@ -1,11 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?8le9g9');
-  src:  url('fonts/icomoon.eot?8le9g9#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.woff2?8le9g9') format('woff2'),
-    url('fonts/icomoon.ttf?8le9g9') format('truetype'),
-    url('fonts/icomoon.woff?8le9g9') format('woff'),
-    url('fonts/icomoon.svg?8le9g9#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?55e37l');
+  src:  url('fonts/icomoon.eot?55e37l#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?55e37l') format('truetype'),
+    url('fonts/icomoon.woff?55e37l') format('woff'),
+    url('fonts/icomoon.svg?55e37l#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -19,6 +18,16 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  
+  /* Enable Ligatures ================ */
+  letter-spacing: 0;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  font-feature-settings: "liga";
+  -webkit-font-variant-ligatures: discretionary-ligatures;
+  font-variant-ligatures: discretionary-ligatures;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
@@ -30,5 +39,20 @@
 }
 .icon-search:before {
   content: "\e8b6";
+}
+.icon-info:before {
+  content: "\ea0c";
+}
+.icon-facebook:before {
+  content: "\ea90";
+}
+.icon-twitter:before {
+  content: "\ea96";
+}
+.icon-appleinc:before {
+  content: "\eabe";
+}
+.icon-android:before {
+  content: "\eac0";
 }
 
